fix(Member): Fix FAB rendering issues when scrolling on mobile

--- a/member/src/js/pages/products/list/Products.css
+++ b/member/src/js/pages/products/list/Products.css
@@ -3,7 +3,7 @@
 }
 
 .fab {
-  position: absolute;
+  position: fixed;
   bottom: 30px;
   right: 30px;
 }
